--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
+    "openai-agents>=0.2.9",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "requests>=2.32.5",
